<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="app.esiea.eatthat.Activity.CreateIngredientActivity"
    android:background="@drawable/background_blue">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:padding="20dp"
        android:weightSum="1"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:onClick="onClick">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_ingredient"
            android:id="@+id/create_ingredient_title"
            android:textSize="28sp"
            android:textColor="#ffffff"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Name"
            android:id="@+id/name_label"
            android:layout_marginTop="44dp"
            android:textSize="18dp"
            android:textColor="#ffffff"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:id="@+id/ingredient_name"
            android:layout_gravity="center_horizontal"
            android:background="#80ffffff"
            android:layout_marginTop="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Categories"
            android:id="@+id/cat_label"
            android:layout_marginTop="24dp"
            android:textSize="18dp"
            android:textColor="#ffffff"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="92dp"
            android:layout_gravity="center_horizontal">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Base"
                    android:id="@+id/cat_base"
                    android:checked="false"
                    android:layout_weight="1" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Salad"
                    android:id="@+id/cat_salad"
                    android:layout_weight="1"
                    android:checked="false" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Meat"
                    android:id="@+id/cat_meat"
                    android:layout_weight="1"
                    android:checked="false" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Dessert"
                    android:id="@+id/cat_dessert"
                    android:layout_weight="1"
                    android:checked="false" />
            </TableRow>
        </TableLayout>

    </LinearLayout>

    <ImageButton
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:id="@+id/btn_back"
        android:background="@drawable/round_button"
        android:src="@drawable/icon_back"
        android:scaleType="centerCrop"
        android:layout_alignBottom="@+id/btn_create_ingredient"
        android:layout_alignParentRight="false"
        android:layout_alignParentEnd="false"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="25dp"
        android:onClick="onButtonClickBack" />

    <ImageButton
        android:layout_width="116dp"
        android:layout_height="116dp"
        android:id="@+id/btn_create_ingredient"
        android:background="@drawable/round_button"
        android:src="@drawable/icon_add"
        android:scaleType="centerCrop"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="false"
        android:layout_alignParentEnd="false"
        android:layout_marginBottom="50dp"
        android:layout_centerHorizontal="true"
        android:onClick="onButtonClickCreate" />

</RelativeLayout>
