<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="app.esiea.eatthat.Activity.SettingsActivity"
    android:background="@drawable/background_blue">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_marginBottom="24dp"
            android:onClick="onButtonClickHistory">

            <ImageButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:id="@+id/histoy_button"
                android:background="@drawable/round_button"
                android:src="@drawable/icon_book"
                android:scaleType="centerCrop"
                android:onClick="onButtonClickHistory" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/History"
                android:id="@+id/history_label"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:textColor="#ffffff"
                android:textSize="18dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_marginBottom="24dp"
            android:onClick="onButtonClickManageStock">

            <ImageButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:id="@+id/stock_manage_button"
                android:background="@drawable/round_button"
                android:src="@drawable/icon_fridge"
                android:scaleType="centerCrop"
                android:onClick="onButtonClickManageStock" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manage_stocks"
                android:id="@+id/stock_manage_label"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:textColor="#ffffff"
                android:textSize="18dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_marginBottom="24dp"
            android:onClick="onButtonClickManageIngredient">

            <ImageButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:id="@+id/create_ingredient_button"
                android:background="@drawable/round_button"
                android:src="@drawable/icon_ingredient"
                android:scaleType="centerCrop"
                android:onClick="onButtonClickManageIngredient" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manage_ingredient"
                android:id="@+id/manage_ingredient_label"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:textColor="#ffffff"
                android:textSize="18dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_marginBottom="24dp"
            android:onClick="onButtonClickSelectLanguage">

            <ImageButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:id="@+id/imageButton2"
                android:background="@drawable/round_button"
                android:src="@drawable/icon_flag"
                android:scaleType="centerCrop"
                android:tint="#7d7d7d"
                android:onClick="onButtonClickSelectLanguage" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_lang"
                android:id="@+id/select_lang_label"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:textColor="#ffffff"
                android:textSize="18dp" />
        </LinearLayout>
    </LinearLayout>

    <ImageButton
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:id="@+id/back_button"
        android:background="@drawable/round_button"
        android:src="@drawable/icon_back"
        android:scaleType="centerCrop"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:onClick="onButtonClickBack" />

</RelativeLayout>
